<resources>
    <string name="app_name">Parks &amp; Recs</string>

    <!--    TOOLBARS-->
    <string name="main_toolbar_title">Welcome</string>
    <string name="cities_toolbar_title">Cities</string>
    <string name="make_reservation_toolbar_title">Make Reservation</string>
    <string name="confirm_reservation_toolbar_title">Confirm Reservation</string>

    <string name="my_reservations">My Reservations</string>
    <string name="log_out">Log out</string>


    <!--    TITLES-->
    <string name="register_form_title1">Create an account and join</string>
    <string name="register_form_title2">Parks &amp; Recs</string>
    <string name="login_form_title1">Need a parking spot, huh?</string>
    <string name="login_form_title2">Log in and find one!</string>
    <string name="cities_title">Select a city</string>
    <string name="reservation_form_title">Set a time and date in</string>

    <!--    FORM HINTS-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="date_hint">MM/DD/YYYY</string>

    <string name="img_description">This is an image</string>
    <string name="title_activity_cities">CitiesActivity</string>


    <!--    BUTTONS-->
    <string name="register_btn">Register</string>
    <string name="login_btn">Log in</string>
    <string name="open_city_parking_lots_btn">Open</string>
    <string name="create_reservation_btn">Reserve</string>
    <string name="make_reservation_btn">Make reservation</string>
    <string name="navigation_btn">Navigate</string>


    <!--    OTHER-->
    <string name="empty_field"> </string>
    <string name="parking_lots">Total parking lots: </string>
    <string name="parking_spots_text">Capacity: </string>
    <string name="parking_lot_available">Available</string>
    <string name="parking_lot_unavailable">Full</string>
    <string name="date_text">Date: </string>
    <string name="time_text">Time: </string>
    <string name="enter_username">Enter a username!</string>
    <string name="enter_password">Enter a password!</string>
    <string name="username_taken">Username already taken!</string>
    <string name="username_doesnt_exist">Username doesn\'t exist!</string>
    <string name="short_username">Username must have at least 4 characters!</string>
    <string name="password_incorrect">Incorrect password!</string>
    <string name="short_password">Password must have at least 6 characters!</string>
    <string name="passwords_not_matching">Passwords don\'t match!</string>
    <string name="enter_date">Enter a date!</string>
    <string name="invalid_date">Invalid date format!</string>
    <string name="past_time_date">Date can\'t be in the past!</string>
    <string name="congrats_text">Congratulations!</string>
    <string name="success_reservation">Your reservation was successful!</string>
    <string name="all_reservations_taken">No open parking spot at selected date/time!</string>
    <string name="city_title">City: </string>
    <string name="lot_title">Parking lot: </string>
    <string name="date_title">Date: </string>
    <string name="time_title">Time: </string>
    <string name="open_spots_text">Open:</string>
    <string name="taken_spots_text">Taken:</string>
    <string name="reservation_cap_exceeded">Max (3) reservations made!</string>
    <string name="finish_reservation">Finish</string>
    <string name="qr_code">QR code</string>


    <string-array name="time_slots">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_qr_code">Scan QR Code</string>

</resources>