<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/register_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_form_title1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_form_title2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/register_title1"
        app:layout_constraintTop_toBottomOf="@+id/register_title1" />


    <EditText
        android:id="@+id/username_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/username_hint"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/register_title2"
        app:layout_constraintTop_toBottomOf="@+id/register_title2" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password_hint"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/username_register"
        app:layout_constraintTop_toBottomOf="@+id/username_register" />

    <EditText
        android:id="@+id/password_register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password_confirm_hint"
        android:ems="10"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/password_register"
        app:layout_constraintTop_toBottomOf="@+id/password_register" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="18dp"
        android:text="@string/register_btn"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="@+id/tv_error_message_register"
        app:layout_constraintStart_toStartOf="@+id/tv_error_message_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_message_register" />

    <ImageView
        android:id="@+id/parking_lot_register_img"
        android:layout_width="258dp"
        android:layout_height="227dp"
        android:contentDescription="@string/img_description"
        android:elevation="-10dp"
        android:rotationY="180"
        android:src="@mipmap/ic_parking_lot_register_foreground"
        android:translationY="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_error_message_register"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/empty_field"
        android:textAlignment="center"
        android:textColor="@color/redish"
        app:layout_constraintEnd_toEndOf="@+id/password_register_confirm"
        app:layout_constraintStart_toStartOf="@+id/password_register_confirm"
        app:layout_constraintTop_toBottomOf="@+id/password_register_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>