<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_form_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_form_title1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_form_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_form_title2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/login_form_title1"
        app:layout_constraintTop_toBottomOf="@+id/login_form_title1" />



    <EditText
        android:id="@+id/username_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/username_hint"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/login_form_title2"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@+id/login_form_title2"
        app:layout_constraintTop_toBottomOf="@+id/login_form_title2" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:autofillHints="@string/password_hint"
        app:layout_constraintStart_toStartOf="@+id/username_login"
        app:layout_constraintTop_toBottomOf="@+id/username_login" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="18dp"
        android:text="@string/login_btn"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_message_login" />

    <TextView
        android:id="@+id/tv_error_message_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/empty_field"
        android:textAlignment="center"
        android:textColor="@color/redish"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <ImageView
        android:id="@+id/parking_lot_login_img"
        android:layout_width="281dp"
        android:layout_height="219dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img_description"
        android:elevation="-10dp"
        android:src="@mipmap/ic_parking_lot_login_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>