<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmReservationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/confirm_reservation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/confirm_reservation_toolbar_title" />

    <TextView
        android:id="@+id/congratsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congrats_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_reservation_toolbar" />

    <TextView
        android:id="@+id/successfulReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_reservation"
        android:textColor="@color/dark_gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/congratsText"
        app:layout_constraintStart_toStartOf="@+id/congratsText"
        app:layout_constraintTop_toBottomOf="@+id/congratsText" />

    <TextView
        android:id="@+id/cityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:text="@string/city_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successfulReservation" />

    <TextView
        android:id="@+id/reserved_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="@color/gray"
        android:textStyle="italic"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/cityTitle"
        app:layout_constraintStart_toEndOf="@+id/cityTitle"
        app:layout_constraintTop_toTopOf="@+id/cityTitle" />

    <TextView
        android:id="@+id/lotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lot_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/cityTitle"
        app:layout_constraintTop_toBottomOf="@+id/cityTitle" />

    <TextView
        android:id="@+id/reserved_lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/lotTitle"
        app:layout_constraintStart_toEndOf="@+id/lotTitle"
        app:layout_constraintTop_toTopOf="@+id/lotTitle" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/lotTitle"
        app:layout_constraintTop_toBottomOf="@+id/lotTitle" />

    <TextView
        android:id="@+id/reserved_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/dateTitle"
        app:layout_constraintStart_toEndOf="@+id/dateTitle"
        app:layout_constraintTop_toTopOf="@+id/dateTitle" />

    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/dateTitle"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle" />

    <TextView
        android:id="@+id/reserved_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/timeTitle"
        app:layout_constraintStart_toEndOf="@+id/timeTitle"
        app:layout_constraintTop_toTopOf="@+id/timeTitle" />

    <ImageView
        android:id="@+id/dontBeLate"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginBottom="8dp"
        android:src="@mipmap/ic_dont_be_late_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/navigateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="20dp"
        android:text="@string/navigation_btn"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/dontBeLate"
        app:layout_constraintEnd_toEndOf="@+id/congratsText"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="@+id/congratsText"
        app:layout_constraintTop_toBottomOf="@+id/timeTitle"
        app:layout_constraintVertical_bias="0.546" />

</androidx.constraintlayout.widget.ConstraintLayout>