<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitiesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cities_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/cities_toolbar_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cities"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cities_title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/parking_icon"
        android:layout_width="58dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img_description"
        android:src="@drawable/ic_parking_icon"
        app:layout_constraintBottom_toTopOf="@+id/rv_cities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cities_toolbar" />

    <TextView
        android:id="@+id/tv_cities_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cities_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/parking_icon"
        app:layout_constraintStart_toEndOf="@+id/parking_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>